# Nexus

./: .dockerignore  .gitignore  Dockerfile  README.md  checklist.txt  config.prod.yaml  config.yaml  go.mod  go.sum  pipelines.yaml  spec.txt  start_services.py  tasks.txt
cmd/decrypt-service/: main.go
cmd/encrypt-service/: main.go
cmd/keygen-service/: main.go
cmd/keystore-service/: main.go
cmd/keyunwrap-service/: main.go
cmd/nexus/: main.go
cmd/nexusctl/: backup.go  bucket.go  cluster.go  completion.go  config.go  errors.go  iam.go  main.go  output.go  output_test.go  user.go
cmd/sts-service/: main.go
cmd/token-service/: main.go
deploy/: docker-compose.yml
docs/: compatibility.md  encryption-microservices.md  mkdocs.yml  runbook.md
docs/docs/: index.md  performance.md  security.md
examples/: docker-compose.yml
examples/helm/: Chart.yaml  values.yaml
examples/terraform/: main.tf  outputs.tf  variables.tf
internal/backup/: backup.go  incremental.go  incremental_test.go  remote.go
internal/bootstrap/: crypto.go
internal/cache/: cache.go
internal/common/: types.go
internal/config/: config.go  config_test.go  hotreload.go  validate.go  validate_test.go
internal/crypto/: encryption.go
internal/events/: bus.go  bus_test.go  deadletter.go  metrics.go  rule.go  webhook.go
policy/: encryption.rego  nexus.rego  vector.rego
proto/: common.proto  decrypt.proto  encrypt.proto  keygen.proto  keystore.proto  keyunwrap.proto  sts.proto  token.proto
sdk/go/s3/: go.mod  (+4 more)
sdk/python/: pyproject.toml
sdk/python/nexus/: __init__.py  client.py
(+147 files in other folders)
